# Playbook_QtCreator

./: CMakeLists.txt  CMakeLists.txt.user.1b451a6  CMakeLists.txt.user.8fcce64  CMakeLists.txt.user.ea03087  Linear_Regression.ipynb  README.md  Resource.qrc  addbook_linkedlist_admin.cpp  addbook_linkedlist_admin.h  addbook_linkedlist_admin.ui  addbook_linkedlist_user.cpp  addbook_linkedlist_user.h  addbook_linkedlist_user.ui  deletebook_linkedlist.cpp  deletebook_linkedlist.h  deletebook_linkedlist.ui  linkedlist_admin.cpp  linkedlist_admin.h  linkedlist_admin.ui  linkedlist_user.cpp  linkedlist_user.h  linkedlist_user.ui  loginscreen_admin.cpp  loginscreen_admin.h  loginscreen_admin.ui  loginscreen_user.cpp  loginscreen_user.h  loginscreen_user.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
